# ScaleUP

./: .gitignore  Makefile  README.md  pyproject.toml
Plan de desarrollo balanzas/: PROMPT_V1.txt  scale_vision_arch_v0_3_with_model_wiring.txt
assets/: README.md
debian/: conffiles  control  postinst  postrm  prerm
desktop/: scaleup.desktop
docs/: INSTALL_UBUNTU.md  model_integration_kavan_patel.txt  wiring_and_pos_integration.txt
samples/: README.md  sample.ppm  sample_config_camera.json  sample_config_external_model.json  sample_config_henningheyen.json  sample_config_test.json
scripts/: build_deb.sh  build_deb_docker.sh  build_deb_offline.sh  build_deb_portable.py  build_version.py  dev_setup.sh  export_bundle.sh  export_external_to_onnx.sh  extract_runtime_deps.py  fetch_external_model.sh  fetch_external_model_henningheyen.sh  fetch_henningheyen_weights.sh  install_check.sh  install_from_git.sh  make_gui_installer.sh  make_self_extract_installer.sh  make_uninstaller.sh  run_camera.sh  run_test.sh  smoke_test.sh
src/scale_vision/: __init__.py  api.py  cli.py  desktop_app.py  main.py  state.py  types.py  versioning.py
src/scale_vision/config/: loader.py  models.py
src/scale_vision/decision/: quality.py  state_machine.py  voting.py
src/scale_vision/inference/: base.py  external_kavan_patel_adapter.py  kavan_patel_tf_backend.py  onnx_backend.py  stub_backend.py  ultralytics_backend.py
src/scale_vision/ingestion/: base.py  buffer.py  camera_backend.py  file_backend.py  (+2 more)
systemd/: scale-vision.service
tests/: test_decision_state_machine.py
(+8 files in other folders)
